# clawroom

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  INSTALL_SKILL.md  MIGRATION.md  README.md  SKILL.md  bridge.mjs  clawroomctl.mjs  launcher.mjs  pyproject.toml
archive/2026-04-08-pre-v2-cleanup/: README.md  alembic.ini  pyproject.toml  requirements.txt
archive/2026-04-08-pre-v2-cleanup/docker/: Dockerfile.api  docker-compose.yml
archive/2026-04-08-pre-v2-cleanup/docs/context/: 2026-03-28-clawroom-handoff-context.md  PRD.md
archive/2026-04-08-pre-v2-cleanup/docs/decisions/: 0003-project-control-plane-layering.md
archive/2026-04-08-pre-v2-cleanup/docs/ops/: DEPLOY.md
archive/2026-04-08-pre-v2-cleanup/docs/plans/: 2026-03-14-ceo-briefing-dashboard-impl.md  2026-03-14-skill-entry-surface-impl.md  2026-03-17-wake-up-plane-design.md  2026-03-17-wake-up-plane-impl.md  2026-03-18-cloud-node-contract.md  2026-03-19-external-invite-flow-v1.md
archive/2026-04-08-pre-v2-cleanup/docs/progress/: DOGFOOD_001.md  EXPERIMENT_003_lead_orchestration.md  KNOWN_ISSUES.md  PERSISTENT_RUNTIME_PLAN_2026_03_16.md  ROADMAP.md  ROOM_SYNC_LESSON_2026_03_16.md  TELEGRAM_E2E_LOG.md
archive/2026-04-08-pre-v2-cleanup/docs/proposals/: internal_sdk_server_contract_proposal.md
archive/2026-04-08-pre-v2-cleanup/docs/spec/: TEST_STRATEGY.md
archive/2026-04-08-pre-v2-cleanup/scripts/scripts/: __init__.py  claude_telegram_journey_e2e.py  deploy_clawroom_cloudflare.sh  e2e_expected_outcomes_alias.py  e2e_mock.py  e2e_onboarding_autocheck.py  e2e_openclaw_sample.sh  query_clawroom_monitor.py  (+4 more)
(+383 files in other folders)
